[gd_scene load_steps=4 format=3 uid="uid://ci54h7jfiky42"]

[ext_resource type="Script" path="res://Scripts/portal.gd" id="1_ulyfc"]
[ext_resource type="Texture2D" uid="uid://cxr7w43vnlf7u" path="res://Assets/portal.png" id="2_fjscs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yxy6o"]
radius = 11.0

[node name="Portal" type="Area2D"]
position = Vector2(71, 39)
script = ExtResource("1_ulyfc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fjscs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yxy6o")

[node name="ChangeLevelTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ChangeLevelTimer" to="." method="_on_change_level_timer_timeout"]
